# compiler_backend

./: .gitignore  CMakeLists.txt  library.cpp  library.h  main.cpp  readme.md
docs/: example-compilations.md  nodes.md
examples/: arith_select_test.ir  cast_test.ir  fibonacci.ir  hello_world.ir  phi_test.ir  pointer_test.ir  read_write_exact.ir  select_test.ir
examples/optimizer/: dead_code_elim.ir
include/: library.h
notes/: analysis-passes.md  inefficiencies-observed.md  nodes.md  sample_ir.md
src/backend/: interface.cpp  interface.hpp  values.cpp  values.hpp
src/backend/codegen/: codegen.cpp  codegen.hpp  dataflow.cpp  dataflow.hpp  inst_gen.cpp  inst_gen.hpp  inst_output.cpp  inst_output.hpp  instructions.cpp  instructions.hpp  registers.cpp  registers.hpp  valuegen.cpp  valuegen.hpp  values.cpp
src/backend/codegen/asmgen/: asm_interface.cpp  asm_interface.hpp  asm_nodes.cpp  asm_nodes.hpp  interface.cpp
src/backend/codegen/context/: function_context.cpp  function_context.hpp  function_storage.cpp  function_storage.hpp  value_reference.cpp  value_reference.hpp
src/backend/debug/: emitter_attachments.cpp  emitter_attachments.hpp
src/backend/ir_analyzer/: analysis_nodes.cpp  analysis_nodes.hpp  ir_analyzer.cpp  ir_analyzer.hpp  node_metadata.cpp  node_metadata.hpp  scope_analyzer.cpp  scope_analyzer.hpp
src/backend/ir_optimizer/: dead_code_elim.cpp  dead_code_elim.hpp
src/debug/: assert.cpp  assert.hpp
src/exec/: executor.cpp  executor.hpp
src/ir/: node_print.cpp  node_prototypes.hpp  nodes.cpp  nodes.hpp
src/ir/input/: element_parsers.hpp  instruction_parsing.cpp  instruction_parsing.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/ir/io/: instruction_parsing.cpp  instruction_parsing.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/ir/output/: ir_emitter.cpp  ir_emitter.hpp
tests/: execution_tests.cpp  lexer_test.cpp  optimization_tests.cpp  parser_consistency_tests.cpp  test_utils.cpp  tests.cpp
